# rust_matrix_multiplication_benchmark

./: Cargo.toml  README.md
src/: benchmark.rs  cli.rs  cli_tables.rs  main.rs  matrix_multiplication.rs
src/matrix_multiplication/: algorithms.rs  generate.rs  sanitize.rs  types.rs
src/thread_pool/: mod.rs
