[package]
name = "matrix_multiplication"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
cli-table = "0.4.7"
colored = "2.0.0"
log = "0.4.17"
rand = "0.8.5"

[profile.deb-rel]
inherits = "release"
debug = true
